--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer {
     background: linear-gradient(to right, rgb(1, 1, 22), rgb(12, 32, 64) );
     width: 100%;
+    height: 100vh;
 }
 
 .footer-content {
@@ -10,6 +11,7 @@
     gap: 50px;
     width: 70%;
     margin: auto;
+    padding-top: 200px;
 }
 
 
