--- a/src/Components/Items/Items.css
+++ b/src/Components/Items/Items.css
@@ -4,6 +4,7 @@
     box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
     margin: 20px;
     padding: 10px;
+    height: 100vh;
 }
 
 .items h2 {
@@ -12,6 +13,7 @@
     text-decoration: underline;
     color: #1d1754;
     font-size: 28px;
+    padding-top: 30px;
 }
 
 .card-items {
@@ -28,7 +30,7 @@
 .card {
     background-color: white;
     max-width: 325px;
-    height: 415px;
+    height: 325px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -55,9 +57,11 @@
     line-height: 1.3;
 }
 
-
-.img-card img{
-    width: 100%;
-    height: 220px;
+.card img {
+    width: 80%;
+    height: 150px;
+    margin: 10px;
 }
+
+
 
