--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,34 +1,38 @@
 .footer {
-    background: linear-gradient(to right, rgb(1, 1, 22), rgb(12, 32, 64) );
+    background: linear-gradient(to right, rgb(1, 1, 22), rgb(12, 32, 64));
     width: 100%;
-    height: 100vh;
+    padding: 40px 20px;
+    box-sizing: border-box;
 }
 
 .footer-content {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
     color: gray;
     gap: 50px;
-    width: 70%;
+    width: 100%;
+    max-width: 1200px;
     margin: auto;
-    padding-top: 200px;
 }
 
-
 .item {
-    transform: none;
-    transition: none;
+    width: 100%;
+    max-width: 400px;
     padding-bottom: 20px;
-    padding-top: 40px;
-    width: 33%;
-    justify-content: space-around;
 }
 
 .item h2 {
     font-weight: 500;
     text-decoration: underline;
     color: aliceblue;
-    font-size: 28px;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.item p {
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 .item li {
@@ -36,7 +40,7 @@
     display: flex;
     align-items: center;
     gap: 10px; 
-    padding: 10px;
+    padding: 10px 0;
 }
 
 .item li:hover {
@@ -44,12 +48,41 @@
     color: whitesmoke;
 }
 
-.copyright{
+.copyright {
     text-align: center;
     color: aliceblue;
-    padding-bottom: 50px;
+    padding-top: 20px;
 }
 
-hr{
+hr {
     width: 60%;
+    margin: 20px auto;
+    border: 1px solid aliceblue;
+}
+
+/* Responsive Styles */
+@media (min-width: 768px) {
+    .footer-content {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .item {
+        padding-top: 40px;
+    }
+}
+
+@media (max-width: 767px) {
+    .item h2 {
+        font-size: 20px;
+    }
+
+    .item p, .item li {
+        font-size: 14px;
+    }
+
+    .item {
+        text-align: center;
+    }
 }
