--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -52,3 +52,18 @@
     margin: 0 40px;
     border-radius: 0px;
 }
+
+@media (max-width: 768px) {
+    .logos-slide img {
+        height: 40px;
+        margin: 0 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .logos-slide img {
+        height: 30px;
+        margin: 0 5px;
+    }
+}
+
