--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,10 @@
 .footer {
     background: linear-gradient(to right, rgb(1, 1, 22), rgb(12, 32, 64));
     width: 100%;
-    padding: 40px 20px;
+    padding: 280px 20px;
     box-sizing: border-box;
+    height: 100vh;
+
 }
 
 .footer-content {
