--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,9 +2,9 @@
     background: linear-gradient(to right, rgb(1, 1, 22), rgb(12, 32, 64));
     width: 100%;
     padding: 280px 20px;
-    box-sizing: border-box;
+    padding-top: 280px;
     height: 100vh;
-
+    box-sizing: border-box;
 }
 
 .footer-content {
@@ -16,6 +16,7 @@
     width: 100%;
     max-width: 1200px;
     margin: auto;
+    padding-top: 210px;
 }
 
 .item {
@@ -64,6 +65,9 @@ hr {
 
 /* Responsive Styles */
 @media (min-width: 768px) {
+    .footer {
+        padding: 100px 20px;
+    }
     .footer-content {
         flex-direction: row;
         justify-content: space-between;
@@ -71,11 +75,27 @@ hr {
     }
 
     .item {
-        padding-top: 40px;
+        padding-top: 25px;
     }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
+    .footer {
+        padding: 100px 20px;
+        height: auto;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer {
+        padding: 50px 10px;
+        height: auto;
+    }
+    .footer-content {
+        gap: 30px;
+        padding-top: 50px;
+        width: 100%;
+    }
     .item h2 {
         font-size: 20px;
     }
@@ -86,5 +106,9 @@ hr {
 
     .item {
         text-align: center;
+        max-width: 100%;
+    }
+    hr {
+        width: 80%;
     }
 }
