--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -61,6 +61,9 @@
 }
 
 @media (max-width: 480px) {
+    .portfolio {
+        width: 100%;
+    }
     .logos-slide img {
         height: 30px;
         margin: 0 5px;
