--- a/src/Components/RelatedProducts/RelatedProducts.css
+++ b/src/Components/RelatedProducts/RelatedProducts.css
@@ -70,6 +70,7 @@
 
 @media (max-width: 480px) {
     .related-items {
+        display: flex;
         gap: 10px;
         margin: 30px auto;
     }
