--- a/src/Pages/CSS/Product.css
+++ b/src/Pages/CSS/Product.css
@@ -136,13 +136,18 @@ button:hover {
 
 @media (max-width: 480px) {
     button {
-        margin: 30px auto;
+        margin-top: 80px;
+        margin-left: 50px;
         width: 90px;
         height: 30px;
         font-size: 12px;
     }
+    .product {
+        margin: 0px;
+    }
 
     .productdisplay-left {
+        justify-content: center;
         align-items: center;
         gap: 10px;
     }
@@ -172,5 +177,8 @@ button:hover {
 
     .productDescription p {
         padding: 10px;
+    }
+    .productdisplay-right {
+        margin: 10px;
     }
 }
