--- a/src/Components/RelatedProducts/RelatedProducts.css
+++ b/src/Components/RelatedProducts/RelatedProducts.css
@@ -3,30 +3,28 @@
     font-size: 28px;
     font-weight: 700;
     color: #3d3d3d;
+    text-align: center;
+    padding-bottom: 20px;
+    text-decoration: underline;
 }
 
 .relatedproducts h4 {
     color: #3d3d3d;
 
 }
-.relatedproducts h2 {
-    text-align: center;
-    padding-bottom: 20px;
-    text-decoration: underline;
-}
+
 
 .related-items {
-    display: flex;
-    height: 300px;
-    width: 280px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 30px;
     margin: 70px 170px;
     align-items: center;
 }
 
 .related-items img {
-    width: 250px;
-    height: 220px;
+    width: 100%;
+    height: 150px;
 }
 
 .related-card:hover {
@@ -50,13 +48,8 @@
     }
 
     .related-card {
-        max-width: 200px;
+        max-width: 100%;
         padding: 15px;
-    }
-
-    .related-items img {
-        width: 200px;
-        height: 180px;
     }
 
     .relatedproducts h2 {
@@ -70,19 +63,13 @@
 
 @media (max-width: 480px) {
     .related-items {
-        display: flex;
         gap: 10px;
         margin: 30px auto;
     }
 
     .related-card {
-        max-width: 150px;
+        max-width: 100%;
         padding: 10px;
-    }
-
-    .related-items img {
-        width: 150px;
-        height: 130px;
     }
 
     .relatedproducts h2 {
